--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@
             <h1>Vision</h1>
             <h2>*****</h2>
             <p>
-              We believe in long-term growth with an emphasis on the potential
-              of emerging markets. We also support the global need of feeding
-              the growing population.
+              We believe in long-term growth with an emphasis on the potential of emerging markets.
+              We also support the global need of feeding the growing population.
             </p>
           </div>
           <div class="offset-md-1 col-md-6">
@@ -123,9 +122,8 @@
             <h1>Mission</h1>
             <h2>*****</h2>
             <p>
-              Breeding and marketing seeds for advanced field crops and
-              vegetable varieties that provide an added value to all supply
-              chain partners.
+              Breeding and marketing seeds for advanced field crops and vegetable varieties that
+              provide an added value to all supply chain partners.
             </p>
           </div>
         </div>
@@ -161,10 +159,7 @@
             </div>
             <h5 class="text-center">Ornamental seeds</h5>
             <div class="line"></div>
-            <p>
-              hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland,
-              etc.
-            </p>
+            <p>hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland, etc.</p>
           </div>
         </div>
       </div>
@@ -176,19 +171,13 @@
             <nav class="navbar navbar-expand">
               <ul class="navbar">
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff"
-                    >PROFILE</a
-                  >
+                  <a class="nav-link" href="#" style="color: #ffffff">PROFILE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff"
-                    >MANAGEMENT</a
-                  >
+                  <a class="nav-link" href="#" style="color: #ffffff">MANAGEMENT</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff"
-                    >PRODUCTS</a
-                  >
+                  <a class="nav-link" href="#" style="color: #ffffff">PRODUCTS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#" style="color: #ffffff">R & D </a>
@@ -197,14 +186,10 @@
                   <a class="nav-link" href="#" style="color: #ffffff">LINKS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff"
-                    >SITEMAP</a
-                  >
+                  <a class="nav-link" href="#" style="color: #ffffff">SITEMAP</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff"
-                    >CONTACT</a
-                  >
+                  <a class="nav-link" href="#" style="color: #ffffff">CONTACT</a>
                 </li>
               </ul>
             </nav>
