--- a/index.html
+++ b/index.html
@@ -11,87 +11,90 @@
       crossorigin="anonymous"
     />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="header">
-      <div class="nav1">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <img src="images/Logo.png" alt="logo" />
-            </div>
-            <div class="offset-md-2 col-md-6">
-              <input
-                class="search"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-                style="margin-left: auto"
-              />
-              <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container" style="padding-right: 0">
-                  <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Company Profile</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Products</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">R & D </a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                      </li>
-                    </ul>
+      <section class="head1">
+        <div class="nav1">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="images/Logo.png" alt="logo" />
+              </div>
+              <div class="offset-md-2 col-md-6">
+                <input
+                  class="search"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                  style="margin-left: auto"
+                />
+                <nav class="navbar navbar-expand-lg navbar-light">
+                  <div class="container" style="padding-right: 0">
+                    <div class="collapse navbar-collapse">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Company Profile</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Products</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">R & D </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Contact</a>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
-                </div>
-              </nav>
+                </nav>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="offer">
-        <div class="container">
-          <div class="row">
-            <div class="offset-md-1 col-md-10">
-              <h1 class="title1">Agridera Seeds and Agriculture Ltd</h1>
-              <button class="more">READ MORE</button>
+        <div class="offer">
+          <div class="container">
+            <div class="row">
+              <div class="offset-md-1 col-md-10">
+                <h1 class="title1">Agridera Seeds and Agriculture Ltd</h1>
+                <button class="more">READ MORE</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </header>
     <section class="Products">
-      <a href="#">
-        <img src="images/1.svg" alt="Wheat" />
-      </a>
-      <a href="#">
-        <img src="images/2.svg" alt="CONFECTION WATERMELON" />
-      </a>
-      <a href="#">
-        <img src="images/3.svg" alt="Clover" />
-      </a>
-      <a href="#">
-        <img src="images/4.svg" alt="CONFECTION Sunflower" />
-      </a>
-      <a href="#">
-        <img src="images/5.svg" alt="Tomato" />
-      </a>
-      <a href="#">
-        <img src="images/6.svg" alt="Eggplant P/O" />
-      </a>
-      <a href="#">
-        <img src="images/7.svg" alt="Ornamental Sunflower" />
-      </a>
+      <div class="row">
+        <div class="col .d-inline-flex flex-column flex-grow-1">
+          <img src="images/1.svg" alt="Wheat" />
+        </div>
+        <div class="col .d-inline-flex flex-column flex-grow-1">
+          <img src="images/2.svg" alt="CONFECTION WATERMELON" />
+        </div>
+        <div class="col .d-inline-flex flex-column flex-grow-1">
+          <img src="images/3.svg" alt="Clover" />
+        </div>
+        <div class="col .d-inline-flex flex-column flex-grow-1">
+          <img src="images/4.svg" alt="CONFECTION Sunflower" />
+        </div>
+        <div class="col .d-inline-flex flex-column flex-grow-1">
+          <img src="images/5.svg" alt="Tomato" />
+        </div>
+        <div class="col .d-inline-flex flex-column flex-grow-1">
+          <img src="images/6.svg" alt="Eggplant P/O" />
+        </div>
+        <div class="col .d-inline-flex flex-column flex-grow-1">
+          <img src="images/7.svg" alt="Ornamental Sunflower" />
+        </div>
+      </div>
     </section>
     <div
       class="container"
@@ -102,7 +105,7 @@
         <div class="row">
           <div class="col-md-5">
             <h1>Vision</h1>
-            <h2>*****</h2>
+            <img src="images/union1.svg" />
             <p>
               We believe in long-term growth with an emphasis on the potential of emerging markets.
               We also support the global need of feeding the growing population.
@@ -120,7 +123,7 @@
           </div>
           <div class="offset-md-1 col-md-5">
             <h1>Mission</h1>
-            <h2>*****</h2>
+            <img src="images/union1.svg" />
             <p>
               Breeding and marketing seeds for advanced field crops and vegetable varieties that
               provide an added value to all supply chain partners.
@@ -164,66 +167,68 @@
         </div>
       </div>
     </section>
-    <section class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <nav class="navbar navbar-expand">
-              <ul class="navbar">
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff">PROFILE</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff">MANAGEMENT</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff">PRODUCTS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff">R & D </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff">LINKS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff">SITEMAP</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="color: #ffffff">CONTACT</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <div class="col-md-4">
-            <div class="footer-row d-flex justify-content-end">
-              <a href="#" class="footer-row__item">
-                <img src="images/Ico_in.svg" alt="in" />
-              </a>
-              <a href="#" class="footer-row__item">
-                <img src="images/Ico_inst.svg" alt="inst" />
-              </a>
-              <a href="#" class="footer-row__item">
-                <img src="images/Ico_tube.svg" alt="tube" />
-              </a>
-              <a href="#" class="footer-row__item">
-                <img src="images/Ico_tw.svg" alt="tw" />
-              </a>
-              <a href="#" class="footer-row__item">
-                <img src="images/Ico_fb.svg" alt="fb" />
-              </a>
+    <footer>
+      <section class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <nav class="navbar navbar-expand">
+                <ul class="navbar">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #ffffff">PROFILE</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #ffffff">MANAGEMENT</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #ffffff">PRODUCTS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #ffffff">R & D </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #ffffff">LINKS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #ffffff">SITEMAP</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #ffffff">CONTACT</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="col-md-4">
+              <div class="footer-row d-flex justify-content-end">
+                <a href="#" class="footer-row__item">
+                  <img src="images/Ico_in.svg" alt="in" />
+                </a>
+                <a href="#" class="footer-row__item">
+                  <img src="images/Ico_inst.svg" alt="inst" />
+                </a>
+                <a href="#" class="footer-row__item">
+                  <img src="images/Ico_tube.svg" alt="tube" />
+                </a>
+                <a href="#" class="footer-row__item">
+                  <img src="images/Ico_tw.svg" alt="tw" />
+                </a>
+                <a href="#" class="footer-row__item">
+                  <img src="images/Ico_fb.svg" alt="fb" />
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="footer2">
-      <div class="container">
-        <div class="row">
-          <div class="footer-row2">
-            <h1 class="title3">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</h1>
+      </section>
+      <section class="footer2">
+        <div class="container">
+          <div class="row">
+            <div class="footer-row2">
+              <h1 class="title3">AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</h1>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </footer>
   </body>
 </html>
