--- a/tomato_all.html
+++ b/tomato_all.html
@@ -61,7 +61,7 @@
         </div>
       </section>
       <section class="head2">
-        <img src="/images/bgtomat.png" alt="bgtomat" />
+        <img src="images/bgtomat.png" alt="bgtomat" />
       </section>
     </header>
     <section class="main_t">
