--- a/tomato_all.html
+++ b/tomato_all.html
@@ -153,7 +153,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-4 d-flex content-center mb-4">
+          <div class="col-4 d-flex justify-content-center mb-4">
             <a class="a-n" href="#">
               <div class="col_tomat">
                 <img src="images/tomato1.png" alt="tomato1" />
