--- a/tomato_one.html
+++ b/tomato_one.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" content="text/html" http-equiv="Content-type" />
-    <title>Homepage</title>
+    <title>Tomato all</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -14,12 +14,12 @@
   </head>
   <body>
     <header class="header">
-      <section class="head1">
+      <section class="head">
         <div class="nav1">
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <img src="images/Logo.png" alt="logo" />
+                <img src="images/Logo2.png" alt="logo" />
               </div>
               <div class="offset-md-2 col-md-6">
                 <input
@@ -59,110 +59,91 @@
             </div>
           </div>
         </div>
-        <div class="offer">
-          <div class="container">
-            <div class="row">
-              <div class="offset-md-1 col-md-10">
-                <h1 class="title1">Agridera Seeds and Agriculture Ltd</h1>
-                <button class="more">READ MORE</button>
-              </div>
-            </div>
-          </div>
-        </div>
       </section>
     </header>
-    <section class="Products">
-      <div class="row">
-        <div class="col flex-column flex-grow-1">
-          <img src="images/1.svg" alt="Wheat" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/2.svg" alt="CONFECTION WATERMELON" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/3.svg" alt="Clover" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/4.svg" alt="CONFECTION Sunflower" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/5.svg" alt="Tomato" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/6.svg" alt="Eggplant P/O" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/7.svg" alt="Ornamental Sunflower" />
-        </div>
-      </div>
-    </section>
-    <div
-      class="container"
-      style="background: #e5e5e5; padding-bottom: 71px; padding-right: 100%"
-    ></div>
-    <section class="Vision-Mission">
+    <section class="main1002">
       <div class="container">
         <div class="row">
-          <div class="col-md-5">
-            <h1>Vision</h1>
-            <img src="images/union1.svg" />
-            <p>
-              We believe in long-term growth with an emphasis on the potential of emerging markets.
-              We also support the global need of feeding the growing population.
-            </p>
+          <a class="a-n" href="#">
+            <div class="arow">
+              <h5>Return to all tomatoes</h5>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-6">
+            <div class="main_tx">
+              <h1>TAG 1002 (TAG 809)</h1>
+              <h2>Tomato Determinate Red Standard Round</h2>
+              <img src="images/union1.svg" />
+            </div>
+            <div class="main_tr">
+              <div class="row">
+                <div class="col-xl-2">
+                  <img src="images/unionr.svg" />
+                </div>
+                <div class="col-xl-7">
+                  <h1>Very high yield and excellent fruits quality!</h1>
+                </div>
+              </div>
+            </div>
+            <div class="tom_ch">CHARACTERISTICS</div>
           </div>
-          <div class="offset-md-1 col-md-6">
-            <img src="images/image 3.png" alt="Vision" />
+          <div class="col-xl-6 d-flex justify-content-end">
+            <img src="images/tag1002.png" alt="tag1002" />
           </div>
         </div>
       </div>
       <div class="container">
-        <div class="row" style="padding-top: 100px; padding-bottom: 100px">
-          <div class="col-md-6">
-            <img src="images/image 2.png" alt="Vision" />
-          </div>
-          <div class="offset-md-1 col-md-5">
-            <h1>Mission</h1>
-            <img src="images/union1.svg" />
-            <p>
-              Breeding and marketing seeds for advanced field crops and vegetable varieties that
-              provide an added value to all supply chain partners.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="Main-activ">
-      <div class="container">
-        <div class="row">
-          <div class="offset-md-1 col-md-10">
-            <h1 class="title2">Agridera’s main activities</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xl-4 d-flex flex-column">
-            <div class="itd_circle flex-grow-1">
-              <img src="images/image 4.png" alt="crop" />
+        <div class="tomato_li">
+          <div class="row">
+            <div class="col-xl-5">
+              <p>
+                Resistance <br />
+                HR: ToMV:0-2; Fol: 1,2; Ve/Vd; <br />
+                IR: TYLCV
+              </p>
             </div>
-            <h5 class="text-center">Open field crop seeds</h5>
-            <div class="line"></div>
-            <p>wheat, cotton, legumes, hybrid confection sunflower</p>
-          </div>
-          <div class="col-xl-4 d-flex flex-column">
-            <div class="itd_circle flex-grow-1">
-              <img src="images/image 5.png" alt="vegetable" />
+            <div class="offset-xl-4 col-xl-3 d-flex justify-content-end">
+              <a href="#" class="a-n">
+                <div class="i_circle">
+                  <img src="images/ico_pdf.svg" alt="pdf" />
+                  <p>Download pdf</p>
+                </div>
+              </a>
             </div>
-            <h5 class="text-center">Vegetable seeds</h5>
-            <div class="line"></div>
-            <p>hybrid open field tomatoes, eggplant, onion, paprika, etc.</p>
           </div>
-          <div class="col-xl-4 d-flex flex-column">
-            <div class="itd_circle flex-grow-1">
-              <img src="images/3 1.png" alt="ornamental" />
+          <div class="row">
+            <div class="col-xl-6">
+              <h5>Plant</h5>
+              <ul>
+                <li>Strong vigor that provides good leaf coverage.</li>
+                <li>Very high productivity with good fruit setting.</li>
+                <li>Early matured variety.</li>
+              </ul>
             </div>
-            <h5 class="text-center">Ornamental seeds</h5>
-            <div class="line"></div>
-            <p>hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland, etc.</p>
+            <div class="col-xl-6">
+              <h5>Cycle</h5>
+              <ul>
+                <li>Spring</li>
+                <li>Fall</li>
+                <li>Winter</li>
+              </ul>
+            </div>
+            <div class="col-xl-6">
+              <h5>Fruit</h5>
+              <ul>
+                <li>Long shelf life on plant and post harvest.</li>
+                <li>Nice shiny attractive deep red color.</li>
+                <li>Average fruit size: 140 – 160 grams.</li>
+              </ul>
+            </div>
+            <div class="col-xl-6">
+              <h5>Color</h5>
+              <p>Red</p>
+            </div>
           </div>
         </div>
       </div>
