--- a/tomato_one.html
+++ b/tomato_one.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" content="text/html" http-equiv="Content-type" />
-    <title>Tomato all</title>
+    <title>Tomato one</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
