--- a/tomato_one.html
+++ b/tomato_one.html
@@ -64,11 +64,13 @@
     <section class="main1002">
       <div class="container">
         <div class="row">
-          <a class="a-n" href="#">
-            <div class="arow">
-              <h5>Return to all tomatoes</h5>
-            </div>
-          </a>
+          <div class="col-xl-2">
+            <a class="a-n" href="#">
+              <div class="arow">
+                <h5>Return to all tomatoes</h5>
+              </div>
+             </a>
+         </div>  
         </div>
       </div>
       <div class="container">
