--- a/contact_us.html
+++ b/contact_us.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" content="text/html" http-equiv="Content-type" />
-    <title>Homepage</title>
+    <title>Tomato all</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -14,12 +14,12 @@
   </head>
   <body>
     <header class="header">
-      <section class="head1">
+      <section class="head">
         <div class="nav1">
           <div class="container">
             <div class="row">
               <div class="col-md-4">
-                <img src="images/Logo.png" alt="logo" />
+                <img src="images/Logo2.png" alt="logo" />
               </div>
               <div class="offset-md-2 col-md-6">
                 <input
@@ -59,112 +59,97 @@
             </div>
           </div>
         </div>
-        <div class="offer">
-          <div class="container">
-            <div class="row">
-              <div class="offset-md-1 col-md-10">
-                <h1 class="title1">Agridera Seeds and Agriculture Ltd</h1>
-                <button class="more">READ MORE</button>
+      </section>
+      <section class="head2">
+        <img src="images/contactbg.png" alt="bgcontact" />
+      </section>
+    </header>
+    <section class="main_contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-3 mb-5">
+            <h1>Contact us</h1>
+            <img src="images/union1.svg" />
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-4">
+            <p>Name *</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+            <p>Company Name</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+            <p>Position</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+            <p>City</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+            <p>Country</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+            <p>Telephone</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+            <p>Email *</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+          </div>
+          <div class="offset-xl-1 col-xl-7">
+            <p>You are a</p>
+            <div class="input-group">
+              <select class="form-select" aria-label="Default select example">
+                <option selected>seed producer</option>
+                <option value="1">seed producer</option>
+                <option value="2">seed producer</option>
+                <option value="3">seed producer</option>
+              </select>
+            </div>
+            <p>If other, please specify</p>
+            <div class="input-group">
+              <input type="text" class="form-control" />
+            </div>
+            <p>You are interested in</p>
+            <div class="input-group">
+              <textarea class="form-control" aria-label="With textarea"></textarea>
+            </div>
+            <div class="row align-items-center">
+              <p>Please type this code</p>
+              <div class="col-xl-2">
+                <img src="images/image 12.svg" />
+              </div>
+              <div class="col-xl-6">
+                <div class="input-group">
+                  <input type="text" class="form-control" />
+                </div>
+              </div>
+              <div class="col-xl-4">
+                <button>Send Message</button>
               </div>
             </div>
           </div>
         </div>
-      </section>
-    </header>
-    <section class="Products">
-      <div class="row">
-        <div class="col flex-column flex-grow-1">
-          <img src="images/1.svg" alt="Wheat" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/2.svg" alt="CONFECTION WATERMELON" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/3.svg" alt="Clover" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/4.svg" alt="CONFECTION Sunflower" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/5.svg" alt="Tomato" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/6.svg" alt="Eggplant P/O" />
-        </div>
-        <div class="col flex-column flex-grow-1">
-          <img src="images/7.svg" alt="Ornamental Sunflower" />
-        </div>
       </div>
     </section>
-    <div
-      class="container"
-      style="background: #e5e5e5; padding-bottom: 71px; padding-right: 100%"
-    ></div>
-    <section class="Vision-Mission">
+    <section class="m_contact">
       <div class="container">
-        <div class="row">
-          <div class="col-md-5">
-            <h1>Vision</h1>
-            <img src="images/union1.svg" />
-            <p>
-              We believe in long-term growth with an emphasis on the potential of emerging markets.
-              We also support the global need of feeding the growing population.
-            </p>
-          </div>
-          <div class="offset-md-1 col-md-6">
-            <img src="images/image 3.png" alt="Vision" />
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row" style="padding-top: 100px; padding-bottom: 100px">
-          <div class="col-md-6">
-            <img src="images/image 2.png" alt="Vision" />
-          </div>
-          <div class="offset-md-1 col-md-5">
-            <h1>Mission</h1>
-            <img src="images/union1.svg" />
-            <p>
-              Breeding and marketing seeds for advanced field crops and vegetable varieties that
-              provide an added value to all supply chain partners.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="Main-activ">
-      <div class="container">
-        <div class="row">
-          <div class="offset-md-1 col-md-10">
-            <h1 class="title2">Agridera’s main activities</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xl-4 d-flex flex-column">
-            <div class="itd_circle flex-grow-1">
-              <img src="images/image 4.png" alt="crop" />
-            </div>
-            <h5 class="text-center">Open field crop seeds</h5>
-            <div class="line"></div>
-            <p>wheat, cotton, legumes, hybrid confection sunflower</p>
-          </div>
-          <div class="col-xl-4 d-flex flex-column">
-            <div class="itd_circle flex-grow-1">
-              <img src="images/image 5.png" alt="vegetable" />
-            </div>
-            <h5 class="text-center">Vegetable seeds</h5>
-            <div class="line"></div>
-            <p>hybrid open field tomatoes, eggplant, onion, paprika, etc.</p>
-          </div>
-          <div class="col-xl-4 d-flex flex-column">
-            <div class="itd_circle flex-grow-1">
-              <img src="images/3 1.png" alt="ornamental" />
-            </div>
-            <h5 class="text-center">Ornamental seeds</h5>
-            <div class="line"></div>
-            <p>hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland, etc.</p>
-          </div>
-        </div>
+        <h5>Our Address</h5>
+        <p>
+          AGRIDERA Seeds &amp; Agriculture Ltd. <br />
+          P.O Box 103,<br />
+          Gedera 70750, Israel. <br />
+          Telephone: <span>+972 8 944 9222</span>
+        </p>
       </div>
     </section>
     <footer>
