--- a/tomato_one.html
+++ b/tomato_one.html
@@ -34,13 +34,13 @@
                     <div class="collapse navbar-collapse">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Home</a>
+                          <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Company Profile</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Products</a>
+                          <a class="nav-link" href="tomato_all.html">Products</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Services</a>
@@ -49,7 +49,7 @@
                           <a class="nav-link" href="#">R & D </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Contact</a>
+                          <a class="nav-link" href="contact_us.html">Contact</a>
                         </li>
                       </ul>
                     </div>
@@ -69,8 +69,8 @@
               <div class="arow">
                 <h5>Return to all tomatoes</h5>
               </div>
-             </a>
-         </div>  
+            </a>
+          </div>
         </div>
       </div>
       <div class="container">
@@ -164,7 +164,7 @@
                     <a class="nav-link" href="#" style="color: #ffffff">MANAGEMENT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: #ffffff">PRODUCTS</a>
+                    <a class="nav-link" href="tomato_all.html" style="color: #ffffff">PRODUCTS</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" style="color: #ffffff">R & D </a>
@@ -176,7 +176,7 @@
                     <a class="nav-link" href="#" style="color: #ffffff">SITEMAP</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: #ffffff">CONTACT</a>
+                    <a class="nav-link" href="contact_us.html" style="color: #ffffff">CONTACT</a>
                   </li>
                 </ul>
               </nav>
