--- a/tomato_all.html
+++ b/tomato_all.html
@@ -34,13 +34,13 @@
                     <div class="collapse navbar-collapse">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Home</a>
+                          <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Company Profile</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Products</a>
+                          <a class="nav-link" href="tomato_all.html">Products</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="#">Services</a>
@@ -49,7 +49,7 @@
                           <a class="nav-link" href="#">R & D </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Contact</a>
+                          <a class="nav-link" href="contact_us.html">Contact</a>
                         </li>
                       </ul>
                     </div>
@@ -172,7 +172,7 @@
             </a>
           </div>
           <div class="col-4 d-flex justify-content-end mb-5">
-            <a class="a-n" href="#">
+            <a class="a-n" href="tomato_one.html">
               <div class="col_tomat">
                 <img src="images/tomato3.png" alt="tomato3" />
                 <h5>TAG 1002 (TAG 809)</h5>
@@ -242,7 +242,7 @@
                     <a class="nav-link" href="#" style="color: #ffffff">MANAGEMENT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: #ffffff">PRODUCTS</a>
+                    <a class="nav-link" href="tomato_all.html" style="color: #ffffff">PRODUCTS</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#" style="color: #ffffff">R & D </a>
@@ -254,7 +254,7 @@
                     <a class="nav-link" href="#" style="color: #ffffff">SITEMAP</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: #ffffff">CONTACT</a>
+                    <a class="nav-link" href="contact_us.html" style="color: #ffffff">CONTACT</a>
                   </li>
                 </ul>
               </nav>
