--- a/tomato_all.html
+++ b/tomato_all.html
@@ -11,6 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
@@ -74,14 +75,14 @@
         </div>
       </section>
       <section class="head2">
-        <img src="images/bgtomat.png" alt="bgtomat" class="img-fluid mt-2" />
+        <img src="img/carrotbg.jpg" alt="bgcarrot" class="img-fluid mt-2" />
       </section>
     </header>
     <section class="main_t">
       <div class="container">
         <div class="row">
           <div class="col-md-9">
-            <h1>Agridera Fresh Market Tomato Hybrids</h1>
+            <h1>Agridera Fresh Market Carrots</h1>
             <img src="images/union1.svg" />
           </div>
         </div>
@@ -90,73 +91,11 @@
         <div class="col">
           <p class="par1">
             Agridera aims to be one of the world's leading companies in the breeding, production,
-            and marketing of tomato seeds. We invest intensively in research and development to
+            and marketing of carrot seeds. We invest intensively in research and development to
             provide solutions to growers and consumers in numerous countries around the world. In
             particular, we breed improved disease-resistant cultivars adapted to different markets
             globally.
           </p>
-          <p class="par1">
-            Currently, emphasis is placed on combining Tomato Yellow Leaf Curl Virus (TYLCV) and
-            Tomato Spotted Wilt Virus (TSWV) resistances with other soil borne diseases into
-            superior tomato breeding lines and hybrids. Moreover, comprehensive efforts are being
-            undertaken to develop varieties resistance to TBRFV virus (Tomato Brown Rugose Fruit
-            Virus).
-          </p>
-          <p class="par1">
-            In terms of horticultural traits, breeding is for earliness, different fruit sizes,
-            firmness, red fruit color, flavor, crack resistance, shelf life, and high/low
-            temperature fruit set. Combinations of quality features and disease resistance are
-            sought in a variety of types, namely round and elongated shapes.
-          </p>
-          <p class="line-r">
-            Agirdera Tomato breeding programs are focusing on three main segments: Greenhouse
-            Indeterminate Tomatoes, Open-field Indeterminate Tomatoes, and Bush Type Open-field
-            Tomatoes.
-          </p>
-        </div>
-      </div>
-      <div class="container">
-        <div class="columns1">
-          <div class="row">
-            <div class="col-xl-4 d-flex flex-column">
-              <div class="col_t">
-                <h3>Greenhouse Tomato Breeding Program</h3>
-                <div class="line1"></div>
-                <p>
-                  This breeding is aimed for the Spanish and Turkish markets. For single and cluster
-                  picks, round fruit shape and resistances of TYLCV, TSWV, Nematodes and FORL
-                  (Fusarium oxysporum f.sp. radicis-lycopersici). Some hybrids may include more
-                  resistances, such as Cladosporium and Leveillula Taurica (Lv).
-                </p>
-              </div>
-            </div>
-            <div class="col-xl-4 d-flex flex-column">
-              <div class="col_t">
-                <h3>Open-field Indeterminate Tomatoes</h3>
-                <div class="line1"></div>
-                <p>
-                  TThis breeding is for Brazilian, Moroccan, and Turkish markets. The main focus is
-                  on large round shape fruits (200 grams plus); and resistances of TYLCV, TSWV,
-                  Nematodes and FORL. In the near future, F3 (Fusarium oxysporum f.sp. lycopersici)
-                  will be included as basic resistance in our cultivars.
-                </p>
-              </div>
-            </div>
-
-            <div class="col-xl-4 d-flex flex-column">
-              <div class="col_t">
-                <h3>Open-field Bush Type Tomatoes</h3>
-                <div class="line1"></div>
-                <p>
-                  This breeding is for Mediterranean markets. We breed round and elongated shapes,
-                  standard sizes (140- 180 grams), and beef sizes (min. 180 grams up to 300 grams
-                  and more). We combine the resistances of TYLCV, TSWV and Nematodes as basic
-                  resistances in our hybrids. However, some hybrids may include more resistances,
-                  such as Cladosporium and Leveillula Taurica (Lv).
-                </p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="container">
@@ -164,79 +103,19 @@
           Agridera operates through international and local distributers around the world.
         </p>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="#">
-              <div class="col_tomat">
-                <img src="images/tomato1.png" alt="tomato1" />
-                <h5>TAG 1000 (TAG 853)</h5>
-                <h3>Tomato Determinate Red Standard Round</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="#">
-              <div class="col_tomat">
-                <img src="images/tomato2.png" alt="tomato2" />
-                <h5>TAG 1001 (TAG 855)</h5>
-                <h3>Tomato Determinate Red Standard Round</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="tomato_one.html">
-              <div class="col_tomat">
-                <img src="images/tomato3.png" alt="tomato3" />
-                <h5>TAG 1002 (TAG 809)</h5>
-                <h3>Tomato Determinate Red Standard Round</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="#">
-              <div class="col_tomat">
-                <img src="images/tomato4.png" alt="tomato4" />
-                <h5>TAG 1003 (TAG 834)</h5>
-                <h3>Tomato Determinate Red Standard Round</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="#">
-              <div class="col_tomat">
-                <img src="images/tomato5.png" alt="tomato5" />
-                <h5>TAG 1004 (TAG 848)</h5>
-                <h3>Tomato Determinate Red BEEF Round</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="#">
-              <div class="col_tomat">
-                <img src="images/tomato6.png" alt="tomato6" />
-                <h5>TAG 1005 (TAG 800)</h5>
-                <h3>Tomato Determinate Red Standard Round</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="#">
-              <div class="col_tomat">
-                <img src="images/tomato7.png" alt="tomato7" />
-                <h5>TAG 1006 (TAG 898)</h5>
-                <h3>Tomato Determinate Red Elongated</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5">
-            <a class="a-n" href="#">
-              <div class="col_tomat">
-                <img src="images/tomato8.png" alt="tomato8" />
-                <h5>TAG 1007 (TAG 816)</h5>
-                <h3>Tomato Determinate Red Elongated</h3>
-              </div>
-            </a>
+      <div id="app">
+
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 col-md-6 d-flex justify-content-center mb-5" v-for="p in products">
+              <a class="a-n" href="tomato_one.html">
+                <div class="col_tomat">
+                  <img v-bind:src="p.image"/>
+                  <h5>{{ p.title }}</h5>
+                  <h3>{{ p.short_text }}</h3>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -304,6 +183,8 @@
         </div>
       </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
