--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </section>
     </header>
     <section class="Products">
-      <div class="row">
+      <div class="row" style="max-width: 1385px">
         <div class="col flex-column flex-grow-1">
           <img src="images/1.svg" alt="Wheat" />
         </div>
@@ -109,10 +109,7 @@
         </div>
       </div>
     </section>
-    <div
-      class="container"
-      style="background: #e5e5e5; padding-bottom: 71px; padding-right: 100%"
-    ></div>
+    <section style="background: #e5e5e5; padding-bottom: 71px"></section>
     <section class="Vision-Mission">
       <div class="container">
         <div class="row align-items-center">
